--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,9 +2,10 @@
   <div class="footer-column footer-left">
     <div>
       <ul>
-        <li><%= link_to "Planes", planes_path() %>
-        <li><%= link_to "Sobre el proyecto", sobre_el_proyecto_path() %>
-        <li><%= link_to "Acceso a clientes",  company_registration_path() %>
+        <li><%= link_to "Planes", planes_path() %></li>
+        <li><%= link_to "Sobre el proyecto", sobre_el_proyecto_path() %></li>
+        <li><%= link_to "Acceso a clientes",  company_registration_path() %></li>
+        <li><%= link_to "Contacto",  "mailto:gestionec@gemma.uy?subject=Contacto GEC: Tengo interés en la plataforma" %></li>
       </ul>
     </div>
   </div>
