Se agrega provision por defecto

--- a/app/views/companies/dashboard.html.erb
+++ b/app/views/companies/dashboard.html.erb
@@ -55,7 +55,7 @@
               <h3><%= evaluation.poll.title %></h3>
               <div class="filters">
                 <div class="tag"><%= evaluation.poll.area.title %></div>
-                <div class="tag"><%= evaluation.poll.provision.title %></div>
+                <!--<div class="tag"><%= evaluation.poll.provision.title %></div>-->
               </div>
               <% if evaluation.is_submitted %>
                 <% if i == 0 
