--- a/app/views/companies/answer_poll.html.erb
+++ b/app/views/companies/answer_poll.html.erb
@@ -15,12 +15,11 @@
       class: 'poll-filters-area', 
       data: {action: 'company#selectFilter'}
     %>
-    <!-- <%= select_tag :provision, 
-      options_for_select( Provision.all.pluck(:title, :id), 0 ),
-      include_blank: "Filtro2",
-      class: 'poll-filters-provision', 
+    <%= select_tag :provision, 
+      options_for_select( Provision.all.pluck(:title, :id) ),
+      class: ['poll-filters-provision', 'disabled'], 
       data: {action: 'company#selectFilter'}
-    %>-->
+    %>
   </div>
   <%= turbo_frame_tag "poll" %>
 </div>
