--- a/app/assets/stylesheets/evaluations.css
+++ b/app/assets/stylesheets/evaluations.css
@@ -101,3 +101,13 @@
   gap: 40px;
   align-items: center;
 }
+.evaluation-actions {
+  position: fixed;
+  height: 90px;
+  display: flex;
+  gap: 40px;
+  background: white;
+  width: 100%;
+  bottom: 0px;
+  align-items: center;
+}
