--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,6 +10,6 @@
     </div>
   </div>
   <div class="footer-column footer-right">
-    <img src="/images/logo-white.svg" />
+    <img src="/images/gemma-logo-blanco.png" />
   </div>
 </div>
