--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
           <p>Bienvenidos a la herramienta digital de gestión y autodiagnóstico de circularidad de Pymes, que permite integrar y profesionalizar buenas prácticas sostenibles.</p>
           <p>A través de esta plataforma, facilitamos un recurso para que las empresas grandes impulsen a las pymes de su cadena de valor a mejorar sus modelos de negocios desde la perspectiva de la circularidad.</p>
         </div>
-        <div class="image-box-image"><img src="/images/workers.jpg"/></div>
+        <div class="image-box-image"><img src="/images/chirayu.jpg"/></div>
       </div>
     </div>
     <div class="section">
@@ -29,7 +29,7 @@
     <div class="section">
       <div class="image-box image-box-right">
         <div class="image-box-text">
-		  <h2>¿Cómo la herramienta o hace?</h2>
+		  <h2>¿Cómo lo hacemos?</h2>
           <p>La Plataforma busca nutrir esfuerzos ya implementados en el país (Ej. Estrategia Nacional de Economía Circular) facilitando una herramienta de gestión que permita integrar y profesionalizar las buenas prácticas en las pymes uruguayas, generando informes con identificación de mejoras, para profesionalizar la gestión estratégica, y potenciar la competitividad, afianzando los vínculos comerciales con actuales clientes, y potenciando oportunidades en mercados globales.</p>
         </div>
         <div class="image-box-image"><img src="/images/abeja.jpg"/></div>
